--- a/quickkycmerchantandroid/app/src/main/AndroidManifest.xml
+++ b/quickkycmerchantandroid/app/src/main/AndroidManifest.xml
@@ -2,13 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hack.bse.com.quickkycmerchant">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:label="">
+        </activity>
+        <activity android:name=".GenerateQRCodeActivity" android:label=""/>
+        <activity android:name=".LoginActivity" android:label=""/>
+        <activity android:name=".FormListActivity" android:label=""/>
+        <activity android:name=".FormViewActivity" android:label="">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
